# degenhack

./: README.md  description.md
api/: app.js  package-lock.json  package.json  server.js
api/model/: game.js  user.js
api/routes/: games.js  users.js
api/utils/: blockchain.js
contracts/: .gitignore  Cargo.toml
contracts/src/prize_manager/: Cargo.toml  lib.rs
docs/: .$degenhack.drawio.png.bkp  .$degenhack.drawio.png.dtmp
front-end/: .prettierrc.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front-end/src/: App.tsx  main.css
front-end/src/api/: base.ts  games.ts  queryKeys.ts  types.ts  winGame.ts
front-end/src/api/hooks/games/: useGetAllGames.ts
front-end/src/components/Dialog/: alertDialog.tsx
front-end/src/components/Header/: header.module.scss  header.tsx
front-end/src/components/Lobby/: Lobbyout.tsx
front-end/src/components/WalletConnectDialog/: walletConnectDialog.tsx
front-end/src/containers/GameView/: GameView.module.scss  GameView.tsx
front-end/src/containers/UserDashboard/: UserDashboard.module.scss  UserDashboard.tsx
front-end/src/views/MainView/: MainView.module.scss  MainView.tsx
front-end/src/web3/: ConnectButton.tsx  getDeployments.ts
