[package]
name = "prize_manager"
version = "0.1.0"
authors = ["Mateusz Adamiec <adamiec.mateusz7@gmail.com>", "Piotr Pawlak <>", "Justyna Rac <justyna.rac@o2.pl>","Artem Sokhin <>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
e2e-tests = []
